# pycounts_mw

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_mw/: __init__.py
tests/: test_pycounts_mw.py
