[tool.poetry]
name = "pycounts_mw"
version = "0.1.0"
description = "counting"
authors = ["michelle"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
